@@ -1,4 +1,4 @@
-.\" $Id: tmux.1,v 1.26 2008-06-03 05:35:51 nicm Exp $
+.\" $Id: tmux.1,v 1.27 2008-06-04 16:11:53 nicm Exp $
 .\"
 .\" Copyright (c) 2007 Nicholas Marriott <nicm@users.sourceforge.net>
 .\"
@@ -440,7 +440,7 @@ if specifed, to
 Enter scroll mode.
 .It Xo Ic select-window 
 .Op Fl s Ar session-name
-.Ar index
+.Op Fl i Ar index
 .Xc
 .D1 (alias: Ic selectw )
 Select the window at
